# MADE_2019_ALGORITHMS_AND_DATA_STRUCTURES

./: CMakeLists.txt  README.md
homework_1/: task_1.cpp  task_2.cpp
homework_2/: task_1.cpp  task_2.cpp
homework_3/: task_1.cpp  task_2.cpp
homework_4/: task_1.cpp
