cmake_minimum_required(VERSION 3.15)
project(MADE_2019_ALGORITHMS_AND_DATA_STRUCTURES)

set(CMAKE_CXX_STANDARD 11)

add_executable(task_1_1 homework_1/task_1.cpp)
add_executable(task_1_2 homework_1/task_2.cpp)
add_executable(task_2_1 homework_2/task_1.cpp)
add_executable(task_2_2 homework_2/task_2.cpp)
add_executable(task_3_1 homework_3/task_1.cpp)
add_executable(task_3_2 homework_3/task_2.cpp)
add_executable(task_4_1 homework_4/task_1.cpp)